; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig_new/extr_stringutils.c_DuplicateStringA.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig_new/extr_stringutils.c_DuplicateStringA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @DuplicateStringA(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %27

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @strlen(i32 %10)
  %12 = add nsw i32 %11, 1
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = mul i64 %14, 4
  %16 = call i64 @MemAlloc(i32 0, i64 %15)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %4, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %9
  store i32* null, i32** %2, align 8
  br label %27

21:                                               ; preds = %9
  %22 = load i32*, i32** %4, align 8
  %23 = load i64, i64* %5, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @StringCchCopyA(i32* %22, i64 %23, i32 %24)
  %26 = load i32*, i32** %4, align 8
  store i32* %26, i32** %2, align 8
  br label %27

27:                                               ; preds = %21, %20, %8
  %28 = load i32*, i32** %2, align 8
  ret i32* %28
}

declare dso_local i32 @strlen(i32) #1

declare dso_local i64 @MemAlloc(i32, i64) #1

declare dso_local i32 @StringCchCopyA(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
